# ContextPress

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: benchmarks.md  caching.md  cli.md  compression-profiles.md  cost-estimation.md  index.md  prompt-cache-layout.md  providers.md  quickstart.md  semantic-cache.md
docs/examples/: openai.py  rag_filter.py
examples/benchmark_prompts/: agent_trace.txt  code_review.txt  long_json.txt  rag_context.txt  support_log.txt
examples/providers/: README.md  anthropic_example.py  groq_example.py  litellm_example.py  mistral_example.py  ollama_example.py  openai_example.py
src/contextpress/: __init__.py  budgets.py  builder.py  cli.py  contracts.py  core.py  formatters.py  prompt_cache.py  reports.py  tokenizer.py  tools.py
src/contextpress/cache/: __init__.py  exact.py  semantic.py  stores.py
src/contextpress/compressors/: __init__.py  base.py  extractive.py  llmlingua.py  reports.py  sentence_filter.py
src/contextpress/memory/: __init__.py  conversation.py
src/contextpress/rag/: __init__.py  chunk.py  filter.py  rerank.py
src/contpress/: __init__.py  benchmark.py  cli.py  contracts.py  core.py  costs.py  diff.py  doctor.py  profiles.py  prompt_cache.py  reports.py  tokenizer.py  tools.py
src/contpress/cache/: __init__.py  exact.py  semantic.py
src/contpress/compressors/: reports.py  sentence_filter.py
src/contpress/memory/: __init__.py  conversation.py  summarizer.py
src/contpress/pricing/: models.json
src/contpress/rag/: filter.py
tests/: test_budget.py  test_builder.py  test_core.py  test_extractive.py  test_formatters.py  test_tokenizer.py  test_v030.py  test_v040.py
