[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextpress"
version = "v0.1.4"
description = "Reduce LLM token usage with token counting, prompt compression, caching, and context filtering."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JadeyGraham96" }]
dependencies = [
    "tiktoken>=0.7.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
compress = ["llmlingua"]
semantic = ["sentence-transformers", "faiss-cpu", "diskcache"]
rag = ["langchain", "langchain-community", "llama-index"]
all = [
    "llmlingua",
    "sentence-transformers",
    "faiss-cpu",
    "diskcache",
    "langchain",
    "langchain-community",
    "llama-index",
]
dev = ["build>=1.0", "pytest>=8.0"]

[project.scripts]
contextpress = "contextpress.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contextpress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
